--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
 }
 
 body {
-  background-color: #1a1b1c;
+  background-color: #292A2C;
   /*background-color: #ffffff;*/
   /*overflow-x: hidden;*/
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
