--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@
 
 body {
   background-color: #292A2C;
-  /*background-color: #ffffff;*/
+  /* background-color: #F8F8F9; */
   /*overflow-x: hidden;*/
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
