--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Bebas Neue';
-  src: url('./fonts/ofont.ru_Bebas Neue.ttf') format('truetype');
+  src: url('./fonts/bebas_neue_book.ttf') format('truetype');
   font-weight: book;
   font-style: normal;
 }
